// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PurchaseDialog should initially render with a closed dialog 1`] = `
<glamorous.Div
  onClick={[Function]}
>
  <p>
    children
  </p>
  <Dialog
    autoDetectWindowHeight={true}
    autoScrollBodyContent={false}
    bodyStyle={
      Object {
        "background": "#fff",
        "padding": 75,
      }
    }
    contentStyle={
      Object {
        "width": "100%",
      }
    }
    modal={false}
    open={false}
    repositionOnUpdate={true}
  >
    <CloseButton
      backgroundColor="#fff"
      fill="#858585"
      handleClick={[Function]}
      right={0}
      top={0}
    />
    <glamorous(div)>
      <p>
        genera qr-code
      </p>
    </glamorous(div)>
    <glamorous(h1)>
      Inquadra il QR-Code
    </glamorous(h1)>
    <glamorous(p)>
      Ti si aprirà il link alla scheda prodotto direttamente sul tuo smartphone.
    </glamorous(p)>
    <glamorous(div)>
      <QRCode
        bgColor="#FFFFFF"
        fgColor="#000000"
        level="L"
        size={200}
        value="https://www.leroymerlin.it/catalogo/SLUG123-PROD123-p?utm_source=digitalstore&utm_medium=digitalstore&utm_campaign=digitalstore"
      />
    </glamorous(div)>
  </Dialog>
</glamorous.Div>
`;

exports[`PurchaseDialog should open the dialog once clicked 1`] = `
<glamorous.Div
  onClick={[Function]}
>
  <p>
    children
  </p>
  <Dialog
    autoDetectWindowHeight={true}
    autoScrollBodyContent={false}
    bodyStyle={
      Object {
        "background": "#fff",
        "padding": 75,
      }
    }
    contentStyle={
      Object {
        "width": "100%",
      }
    }
    modal={false}
    open={true}
    repositionOnUpdate={true}
  >
    <CloseButton
      backgroundColor="#fff"
      fill="#858585"
      handleClick={[Function]}
      right={0}
      top={0}
    />
    <glamorous(div)>
      <p>
        genera qr-code
      </p>
    </glamorous(div)>
    <glamorous(h1)>
      Inquadra il QR-Code
    </glamorous(h1)>
    <glamorous(p)>
      Ti si aprirà il link alla scheda prodotto direttamente sul tuo smartphone.
    </glamorous(p)>
    <glamorous(div)>
      <QRCode
        bgColor="#FFFFFF"
        fgColor="#000000"
        level="L"
        size={200}
        value="https://www.leroymerlin.it/catalogo/SLUG123-PROD123-p?utm_source=digitalstore&utm_medium=digitalstore&utm_campaign=digitalstore"
      />
    </glamorous(div)>
  </Dialog>
</glamorous.Div>
`;
